--- a/easistent/popup.html
+++ b/easistent/popup.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>eA sux</title>
     <link rel="stylesheet" href="popup.css">
 </head>
+
 <body width="200">
     <h1>eAsistent Sux</h1>
     <div id="options">
         <div class="option">
-            <span>Dark mode</span>
+            <span title="Saves your eyes.">Dark mode</span>
             <div id="dark" class="slide"></div>
         </div>
         <div class="option">
-            <span>Floppa</span>
+            <span title="Grants you most eA plus features">Override Plus</span>
+            <div id="plus" class="slide"></div>
+        </div>
+        <div class="option">
+            <span title="Patch in certain plus features">Extend UI</span>
+            <div id="extend" class="slide"></div>
+        </div>
+        <div class="option">
+            <span class="joke" title="eAsistent. Now with your favourite caracal.">Floppa</span>
             <div id="flop" class="slide"></div>
         </div>
         <div class="option">
-            <span>LSD *gone wrong*</span>
+            <span class="joke" title="What eAsistent devs were on.">LSD</span>
             <div id="lsd" class="slide"></div>
-        </div>    
+        </div>
+    </div>
+    <div class="about">
+        <p><a href="#" onclick="gh">Github</a> | Made with pure hate for eA.</p>
     </div>
     <script src="popup.js"></script>
 </body>
+
 </html>
