Big boy webpack

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>eA sux</title>
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="popup-style.css">
 </head>
 
 <body width="200">
