Extend UI now actually works

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,27 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>eA sux</title>
+    <title>eAsistent+</title>
     <link rel="stylesheet" href="popup-style.css">
 </head>
 
 <body width="200">
-    <h1>eAsistent Sux</h1>
+    <h1>eAsistent+</h1>
     <div id="options">
         <div class="option">
             <span title="Saves your eyes.">Dark mode</span>
             <div id="dark" class="slide"></div>
         </div>
         <div class="option">
-            <span title="Grants you most eA plus features">Override Plus</span>
+            <span title="Client sided plus.">Override Plus</span>
             <div id="plus" class="slide"></div>
         </div>
         <div class="option">
-            <span title="Patch in certain plus features">Extend UI</span>
+            <span title="Hidden tabs and more... [only works with Override Plus]">Extend UI</span>
             <div id="extend" class="slide"></div>
         </div>
         <div class="option">
-            <span class="joke" title="eAsistent. Now with your favourite caracal.">Floppa</span>
+            <span class="joke" title="eAsistent. Now with your favourite caracal.">Big Floppa</span>
             <div id="flop" class="slide"></div>
         </div>
         <div class="option">
@@ -32,9 +32,9 @@
         </div>
     </div>
     <div class="about">
-        <p><a href="#" onclick="gh">Github</a> | Made with pure hate for eA.</p>
+        <p><a href="#g">Github</a> | v1.1.2 | <a href="#b">Report a bug</a> </p>
     </div>
-    <script src="popup.js"></script>
+    <script src="popup.bundle.js"></script>
 </body>
 
 </html>
