--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,39 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>eAsistent+</title>
+        <link rel="stylesheet" href="popup-style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <title>eAsistent+</title>
-    <link rel="stylesheet" href="popup-style.css">
-</head>
-
-<body width="200">
-    <h1>eAsistent+</h1>
-    <div id="options">
-        <div class="option">
-            <span title="Saves your eyes.">Dark mode</span>
-            <div id="dark" class="slide"></div>
+    <body width="200">
+        <h1>eAsistent+</h1>
+        <div id="options">
+            <div class="option">
+                <span title="Saves your eyes.">Dark mode</span>
+                <div id="dark" class="slide"></div>
+            </div>
+            <div class="option">
+                <span title="Client sided plus.">Override Plus</span>
+                <div id="plus" class="slide"></div>
+            </div>
+            <div class="option">
+                <span
+                    title="Hidden tabs and more... [only works with Override Plus]"
+                    >Extend UI</span
+                >
+                <div id="extend" class="slide"></div>
+            </div>
+            <div class="option">
+                <span title="Remove uneeded shit.">Simple homepage</span>
+                <div id="simplehome" class="slide"></div>
+            </div>
+            <div class="option">
+                <span
+                    class="joke"
+                    title="eAsistent. Now with your favourite caracal."
+                    >Big Floppa</span
+                >
+                <div id="flop" class="slide"></div>
+            </div>
+            <div class="option">
+                <span
+                    class="joke"
+                    title="SIGMA MALE GRINDSET TIPS #sigma"
+                    >Sigma</span
+                >
+                <div id="sigma" class="slide"></div>
+            </div>
+            <div class="option">
+                <span class="joke" title="What eAsistent devs were on."
+                    >LSD</span
+                >
+                <div id="lsd" class="slide"></div>
+            </div>
         </div>
-        <div class="option">
-            <span title="Client sided plus.">Override Plus</span>
-            <div id="plus" class="slide"></div>
+        <div class="about">
+            <p>
+                <a href="#g">Github</a> | <span id="ver">unknown</span> |
+                <a href="#b">Report a bug</a>
+            </p>
         </div>
-        <div class="option">
-            <span title="Hidden tabs and more... [only works with Override Plus]">Extend UI</span>
-            <div id="extend" class="slide"></div>
-        </div>
-        <div class="option">
-            <span class="joke" title="eAsistent. Now with your favourite caracal.">Big Floppa</span>
-            <div id="flop" class="slide"></div>
-        </div>
-        <div class="option">
-            <span class="joke" title="What eAsistent devs were on.">LSD</span>
-            <div id="lsd" class="slide"></div>
-        </div>
-    </div>
-    <div class="about">
-        <p><a href="#g">Github</a> | <span id="ver">unknown</span> | <a href="#b">Report a bug</a> </p>
-    </div>
-</body>
-
+    </body>
 </html>
